TINY-11447: comments dark mode fixes

--- a/modules/oxide/src/less/theme/components/comments/comment.less
+++ b/modules/oxide/src/less/theme/components/comments/comment.less
@@ -2,12 +2,13 @@
 // Tiny Comments
 //
 
-@comment-selected-background-color: contrast(@text-color, lighten(@color-active, 30%), mix(@color-active, @color-black, 20%));
+@comment-selected-background-color: .bg-luma-checker(lighten(@color-active, 30%), mix(@color-active, @color-black, 20%))[@result];
 @comment-selected-border-color: @color-active;
 
 @comment-background-color: @background-color;
+@comment-border-color: .bg-luma-checker(@border-color, @comment-background-color)[@result];
 @comment-border-radius: @panel-border-radius;
-@comment-border: 1px solid @border-color;
+@comment-border: 1px solid @comment-border-color;
 @comment-box-shadow: 0 4px 8px 0 fade(@color-black, 10%);
 //TODO: Same as menu. Make a common helper variable?
 @comment-font-size: @font-size-sm;
@@ -18,6 +19,9 @@
 @comment-text-color: @text-color;
 @comment-text-transform: initial;
 @comment-text-color-muted: @text-color-muted;
+
+@comment-textarea-border-color:.bg-luma-checker(@border-color, @comment-text-color-muted)[@result];
+@comment-textarea-background-color: .bg-luma-checker(@background-color, @comment-selected-background-color)[@result];
 
 @z-index-comment-overlay: 5;
 @z-index-comment-overlay-text: 10;
@@ -145,6 +149,17 @@
       resize: none;
       white-space: normal;
       width: 100%;
+
+      background-color: @comment-textarea-background-color;
+      border-color: @comment-textarea-border-color;
+
+      &::placeholder {
+        color: @comment-text-color-muted;
+      }
+
+      &:focus {
+        background-color: @comment-textarea-background-color;
+      }
     }
   }
 
